# cuOT

./: .gitignore  Dockerfile  Makefile  README.md  SilentPprf.cpp  SilentPprf.h  aes  aes.c  aes.cpp  aes.h  aesCudaUtils.cpp  aesCudaUtils.hpp  aesDecrypt_kernel.h  aesEncrypt_kernel.h  aesExpand_kernel.h  aesgpu.cu  aesgpu.h  aesni.c  aesni.cpp  aesni.h  compose.yaml  diff  docker-compose.yaml  ferret.dockerfile  fft_example.cu  ideas  ideas.txt  job-ferret.sh  job.sh  log-14.txt  log-16.txt  log-18.txt  log-20.txt  log.txt  main.c  main.cpp  main.cu  mylog  mytypes.h  nsys-stats.qdrep  (+27 more)
0-app/: event_log.cu  event_log.h  main.cu  ot.cu  ot.h  silentOT.cu  silentOT.h  silentOT_recver.cu  silentOT_sender.cu  silent_ot.cu  silent_ot.h  silent_ot_recv.cu  silent_ot_send.cu  simplest_ot.cu  simplest_ot.h  unit_test.cu  unit_test.h  util.cu  util.h
0_app_level/: main.cu  protocols.h  unit_test.cu  util.cu
1-module/: Blake2.h  Hashable.h  aes.cu  aes.h  base_ot.cu  base_ot.h  ec.cu  ec.h  hash.cu  hash.h  pprf.cu  pprf.h  pprf_recv.cu  pprf_send.cu  (+4 more)
ferret/emp-ot/: CMakeLists.txt
ferret/emp-ot/cmake/: emp-ot-config.cmake
ferret/emp-ot/emp-ot/: co.h  cot.h  emp-ot.h  iknp.h
ferret/emp-ot/emp-ot/ferret/: base_cot.h  constants.h  cuda_layer.cu  cuda_layer.h  dev_layer.cu  dev_layer.h  ferret_cot.h  ferret_cot.hpp  lpn_f2.h  lpnf2.h  mpcot_reg.h  preot.h  recver.cu  recver.h  roles.h  sender.cu  sender.h  spcot_recver.h  spcot_sender.h  tree_exp.cu  tree_exp.h
ferret/emp-ot/test/: CMakeLists.txt  bench_lpn.cpp  ferret.cpp  ferret.cu  main.cpp  main.cu  ot.cpp  test.h
(+320 files in other folders)
